--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,6 @@ nav{
  }
  .links span {
      padding: 10px;
-     /* width: 20%;
-     height: 50px; */
      border: 1px solid #fff;
      border-radius: 50%;
  }
@@ -63,20 +61,11 @@ nav{
     width: 20%;
     height: 635px;
 }
-/* .left-side-toggle {
-    background-color: #f4f4f4;
-    margin-top: 50px;
-    width: 5%;
-    height: 635px;
-} */
 .left-arrow i {
     margin-top: 30px;
     margin-left: 20px;
     font-size: 20px;
 }
-/* .list .sub-list:hover {
-    background-color: #fff;
-} */
 #element .list {
     padding-left: 20px;
    
@@ -131,7 +120,7 @@ li {
     vertical-align: top;
     margin-top: 50px;
     margin-left: 30px;
-    width: 70%;
+    width: 75%;
 }
 .task-part-1 {
     display: inline-block;
@@ -149,10 +138,8 @@ li {
 .task-value ul {
     padding-left: 0px;
 }
-
 .task-value span {
     font-size: 15px;
-    /* margin-left: 20px; */
     margin-top: 10px;
     left: 0;
 }
@@ -165,7 +152,6 @@ li {
 #assigned-task li {
     padding-bottom: 15px;
     border-bottom: 1px solid #e5e5e5;
-
 }
 
 #assigned-task li input[type="checkbox"] {
@@ -186,14 +172,12 @@ input[type="checkbox"]:checked + span {
  }
 
 .task-part .assign-task {
-    /* width: 50%; */
     outline: none;
     border: 0;
     margin-left: 20px;
 }
 
 .task-part-1 .assign-task {
-    /* width: 50%; */
     outline: none;
     border: 0;
     margin-left: 20px;
@@ -212,7 +196,9 @@ input[type="checkbox"]:checked + span {
     vertical-align: top;
     margin-top: 30px;
     margin-left: 5px;
+    /* background-color: #f4f4f4; */
 }
+
 #add-steps {
     margin-top: 30px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
@@ -260,6 +246,32 @@ input[type="checkbox"]:checked + span {
     float: right;
     margin-top: 20px;
     padding-right: 15px;
+}
+.steps-to-myday {
+    margin-top: 20px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
+.step-icons {
+    margin-left: 20px;
+    color: #767678;
+}
+.step-content {
+    padding-left: 18px;
+    color: #767678;
+} 
+.step-type {
+    margin-top: 20px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.step-reminder {
+    margin-top:20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.repeat {
+    margin-top: 20px;
 }
 
 
